add open in broweser

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main>
         <img src="boss.png" alt="The AI Boss">
-        <h2>Links</h2>
+        <h2>Links: open in Browser</h2>
         <ul class="links">
             <li><a href="https://greggelong.github.io/aiBossChat/" target="_blank">AI Boss Chat (English)</a></li>
             <li><a href="https://greggelong.github.io/aiBossChatZh/" target="_blank">AI Boss Chat (Chinese)</a></li>
