add link and pdf

--- a/index.html
+++ b/index.html
@@ -1,81 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The AI Boss: Multimodal Intelligence</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #fff;
-            color: #000;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        header {
-            padding: 20px;
-        }
-        header h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-        header p {
-            font-size: 1.2em;
-            margin: 0;
-        }
-        main {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 20px;
-        }
-        footer {
-            margin-top: 30px;
-            font-size: 0.9em;
-        }
-        .links {
-            list-style-type: none;
-            padding: 0;
-        }
-        .links li {
-            margin: 10px 0;
-        }
-        .links a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-        .links a:hover {
-            text-decoration: underline;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #fff;
+        color: #000;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+      }
+      header {
+        padding: 20px;
+      }
+      header h1 {
+        font-size: 2.5em;
+        margin: 0;
+      }
+      header p {
+        font-size: 1.2em;
+        margin: 0;
+      }
+      main {
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+      }
+      footer {
+        margin-top: 30px;
+        font-size: 0.9em;
+      }
+      .links {
+        list-style-type: none;
+        padding: 0;
+      }
+      .links li {
+        margin: 10px 0;
+      }
+      .links a {
+        color: #007bff;
+        text-decoration: none;
+      }
+      .links a:hover {
+        text-decoration: underline;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>The AI Boss: Multimodal Intelligence</h1>
-        <p>A conceptual exploration of artificial intelligence in art.</p>
+      <h1>The AI Boss: Multimodal Intelligence</h1>
+      <p>A conceptual exploration of artificial intelligence in art.</p>
     </header>
     <main>
-        <img src="boss.png" alt="The AI Boss">
-        <h2>Links: 在浏览器中打开 OPEN IN BROWSER</h2>
-        <ul class="links">
-            <li><a href="https://greggelong.github.io/aiBossChat/" target="_blank">AI Boss Chat (English)</a></li>
-            <li><a href="https://greggelong.github.io/aiBossChatZh/" target="_blank">AI Boss Chat (Chinese)</a></li>
-            <li><a href="https://greggelong.github.io/laoban/" target="_blank">Laoban: Rules for Brick Moving</a></li>
-            <li><a href="https://greggelong.github.io/artWorkerClass/" target="_blank">Art Worker Class: classify objects such as art workers, bones, steel, and other tools integral to the performance</a></li>
-        </ul>
-        <section>
-            <h2>About the AI Boss</h2>
-            <p>The AI Boss is a recurring figure in our works, embodying different stages of artificial intelligence, from symbolic to contemporary deep learning models. Each iteration explores its role in guiding and controlling human behavior.</p>
-            <p>For technical details and code, visit our <a href="https://github.com/greggelong" target="_blank">GitHub repositories</a>.</p>
-        </section>
+      <img src="boss.png" alt="The AI Boss" />
+      <h2>Links: 在浏览器中打开 OPEN IN BROWSER</h2>
+      <ul class="links">
+        <li>
+          <a href="https://greggelong.github.io/aiBossChat/" target="_blank"
+            >AI Boss Chat (English)</a
+          >
+        </li>
+        <li>
+          <a href="https://greggelong.github.io/aiBossChatZh/" target="_blank"
+            >AI Boss Chat (Chinese)</a
+          >
+        </li>
+        <li>
+          <a href="https://greggelong.github.io/laoban/" target="_blank"
+            >Laoban: Rules for Brick Moving</a
+          >
+        </li>
+        <li>
+          <a href="https://greggelong.github.io/artWorkerClass/" target="_blank"
+            >Art Worker Class: classify objects such as art workers, bones,
+            steel, and other tools integral to the performance</a
+          >
+        </li>
+        <li>
+          <a href="https://greggelong.github.io/awrecog/" target="_blank">
+            MoveNet Integration: Real-time Skeleton Tracking /
+            MoveNet集成：骨架识别与实时追踪</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://greggelong.github.io/aiBoss/baiboss.pdf"
+            target="_blank"
+          >
+            The Birth of the AI Boss / AI老板的诞生 PDF
+          </a>
+        </li>
+      </ul>
+      <section>
+        <h2>About the AI Boss</h2>
+        <p>
+          The AI Boss is a recurring figure in our works, embodying different
+          stages of artificial intelligence, from symbolic to contemporary deep
+          learning models. Each iteration explores its role in guiding and
+          controlling human behavior.
+        </p>
+        <p>
+          For technical details and code, visit our
+          <a href="https://github.com/greggelong" target="_blank"
+            >GitHub repositories</a
+          >.
+        </p>
+      </section>
     </main>
     <footer>
-        <p> 2024 Art Workers.</p>
+      <p>2024 Art Workers.</p>
     </footer>
-</body>
+  </body>
 </html>
