--- a/index.html
+++ b/index.html
@@ -102,10 +102,14 @@
       <section>
         <h2>About the AI Boss</h2>
         <p>
-          The AI Boss is a recurring figure in our works, embodying different
-          stages of artificial intelligence, from symbolic to contemporary deep
-          learning models. Each iteration explores its role in guiding and
-          controlling human behavior.
+          Overview / 概述 This document traces the emergence and evolution of
+          the AI Boss—a recurring figure across multiple performances and
+          installations since May 2024. Originally developed as part of Urban
+          Palimpsest, the AI Boss has evolved into a multimodal intelligence
+          that enforces, observes, and commands. Its trajectory mirrors the
+          history of artificial intelligence, moving from rule-based symbolic
+          systems to modern deep learning and large language models.
+          本文档追溯了“AI老板”的诞生与演化。自2024年5月首次亮相于《都市重写》项目以来，它已在多个行为表演与装置作品中反复出现，并不断升级。从最初基于规则的符号系统，AI老板逐步进化为具备多模态智能的存在，能够执行命令、观察环境并下达指示，其发展历程反映了人工智能从符号逻辑到深度学习与大语言模型的演进过程。
         </p>
         <p>
           For technical details and code, visit our
